Allowed rol results to overflow into multiple lines, fixed issue when switching between edit mode

--- a/src/styles/storyPage/dicePanel.module.scss
+++ b/src/styles/storyPage/dicePanel.module.scss
@@ -54,19 +54,26 @@ $numWidth: 15px;
     }
 }
 
-.roll {
+.rollBackground {
     @include color(third);
     @include colorShadow();
-    @extend .interactive;
 
     position: absolute;
-    z-index: -1;
+    display: flex;
     right: 0;
     top: 3px;
+    width: 120px;
     border-radius: $width / 2.0;
     height: $width;
-    padding: 0 $width + 15 0 10px;
     user-select: none;
+}
+
+.roll {
+    @extend .interactive;
+    @include colorShadow();
+    z-index: 1000;
+    border-radius: $width / 2.0;
+    width: 75px;
 }
 
 .interactive {
